fixed the deprecated security configuration